# GDTK

./: .gitignore  .gitmodules  BuildDependencies.bat  CLA.md  CMakeLists.txt  License.txt  README.md  ToolKit.sln  UtilArtifacts.bat  update-lc.py
.github/workflows/: cla-asistant.yml
Config/: Editor.settings  Engine.settings  GamePluginBuild.bat  UILayout.ini
Dependency/: CMakeLists.txt
Dependency/RapidXml/: rapidxml_utils.hpp
Dependency/tkimgui/: CMakeLists.txt  tk_imconfig.h
Editor/: Action.cpp  Action.h  Anchor.cpp  Anchor.h  AnchorMod.cpp  AnchorMod.h  AndroidBuildWindow.cpp  AndroidBuildWindow.h  App.cpp  App.h  ComponentView.cpp  ComponentView.h  ConsoleWindow.cpp  ConsoleWindow.h  CustomDataView.cpp  CustomDataView.h  DirectoryEntry.cpp  DirectoryEntry.h  DynamicMenu.cpp  DynamicMenu.h  Editor.vcxproj  Editor.vcxproj.filters  EditorApi.cpp  EditorApi.h  EditorBillboard.cpp  EditorBillboard.h  EditorCamera.cpp  EditorCamera.h  EditorCanvas.cpp  EditorCanvas.h  EditorLight.cpp  EditorLight.h  EditorMetaKeys.h  EditorRenderer.cpp  EditorRenderer.h  EditorScene.cpp  EditorScene.h  EditorTypes.h  EditorViewport.cpp  EditorViewport.h  (+69 more)
Import/: Import.vcxproj  import.cpp
Packer/: Packer.cpp  Packer.vcxproj
Resources/Engine/Layers/: splash-screen.layer
Resources/Engine/Materials/: checkerBoard.material  dpad.material  lambertWhite.material  missing.material  splash-logo.material
Resources/Engine/Shaders/: AO.shader  cameraDataInc.shader  defaultFragment.shader  defaultVertex.shader  depthOfFieldFrag.shader  dilateFrag.shader  drawDataInc.shader  equirectToCubeFrag.shader  equirectToCubeVert.shader  forwardPreProcess.shader  forwardPreProcessVert.shader  gridFragment.shader  gridVertex.shader  ibl.shader  irradianceGenerateVert.shader  lightComplexity.shader  lighting.shader  materialCacheInc.shader  normalFrag.shader  orthogonalDepthFrag.shader  orthogonalDepthVert.shader  orthogonalDepthViewFrag.shader  orthogonalDepthViewVert.shader  pbr.shader  perspectiveDepthFrag.shader  perspectiveDepthVert.shader  perspectiveDepthViewFrag.shader  positionVert.shader  shadow.shader  skyboxVert.shader  ssaoCalcFrag.shader  texCoordFrag.shader  unlitFrag.shader
Resources/Engine/Textures/EnvCacheMap/: defaultGradientSky_diff_env_bake.hdr  defaultGradientSky_spec_env_bake_1.hdr  defaultGradientSky_spec_env_bake_2.hdr  defaultGradientSky_spec_env_bake_3.hdr  defaultGradientSky_spec_env_bake_4.hdr  defaultGradientSky_spec_env_bake_5.hdr  defaultGradientSky_spec_env_bake_6.hdr  defaultHDRI_diff_env_bake.hdr  defaultHDRI_spec_env_bake_1.hdr  defaultHDRI_spec_env_bake_2.hdr  defaultHDRI_spec_env_bake_3.hdr  defaultHDRI_spec_env_bake_4.hdr  defaultHDRI_spec_env_bake_5.hdr  defaultHDRI_spec_env_bake_6.hdr
Templates/Game/: CMakeLists.txt
Templates/Game/Android/app/: build.gradle  proguard-rules.pro
Templates/Game/Android/app/jni/: CMakeLists.txt
Templates/Game/Android/app/jni/src/: CMakeLists.txt
Templates/Game/Android/app/src/main/: AndroidManifest.xml
Templates/Game/Android/app/src/main/java/com/otyazilim/toolkit/: ToolKitActivity.java
Templates/Game/Codes/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Templates/Game/Codes/Platform/: android_main.h  web_main.h  windows_main.h
Templates/Plugin/Codes/: CMakeLists.txt  PluginMain.h
ToolKit/: AABBOverrideComponent.cpp  AABBOverrideComponent.h  AABBTree.cpp  AABBTree.h  Animation.cpp  Animation.h  AnimationControllerComponent.cpp  AnimationControllerComponent.h  Audio.cpp  Audio.h  BillboardPass.cpp  BillboardPass.h  BinPack2D.cpp  BinPack2D.h  BloomPass.cpp  BloomPass.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Class.h  Component.cpp  Component.h  CubemapPass.cpp  CubemapPass.h  DebugNew.h  DirectionComponent.cpp  DirectionComponent.h  DofPass.cpp  DofPass.h  Dpad.cpp  Dpad.h  Drawable.cpp  Drawable.h  EngineSettings.cpp  EngineSettings.h  Entity.cpp  Entity.h  EnvironmentComponent.cpp  (+129 more)
ToolKit/Common/: SDLEventPool.h  Win32Utils.h
signatures/version1/: cla.json
